Remove Surname Field from Registartion Form.

--- a/src/app/pages/auth/registration/registration.component.html
+++ b/src/app/pages/auth/registration/registration.component.html
@@ -21,7 +21,7 @@
                         <div *ngIf="f.lastName.errors.maxlength">Maximun 30 characters are allowed.</div>
                     </div>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="surname">Surname*</label>
                     <input type="text" formControlName="surname" class="form-control"
                         [ngClass]="{ 'is-invalid': submitted && f.surname.errors }" />
@@ -29,7 +29,7 @@
                         <div *ngIf="f.surname.errors.required">Surname is required</div>
                         <div *ngIf="f.surname.errors.maxlength">Maximun 30 characters are allowed.</div>
                     </div>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label for="mobile">Mobile*</label>
                     <input type="text" formControlName="mobile" class="form-control"
